# email-sync

./: .env.example  .gitignore  Cargo.toml  README.md
examples/: basic_otp.rs  custom_matcher.rs  error_handling.rs  find_recent.rs  with_proxy.rs  with_tracing.rs
src/: client.rs  config.rs  connection.rs  error.rs  known_servers.rs  lib.rs  matcher.rs  parser.rs  proxy.rs  session.rs
tests/: integration.rs
